--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -17,10 +17,12 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/shoppingcart">Shopping-Cart</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/login">LogIn</a>
-      </li>
-      <li ngbDropdown class="nav-item cursor">
+      <ng-template #anonymusUser>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">LogIn</a>
+        </li>
+      </ng-template>
+      <li ngbDropdown class="nav-item cursor" *ngIf='auth.user$ | async as user else anonymusUser '>
         <a
           class="nav-link"
           ngbDropdownToggle
@@ -28,7 +30,7 @@
           data-toggle="dropdown"
           aria-haspopup="true"
           aria-expanded="false"
-          >Username</a
+          >{{user.displayName}}</a
         >
         <div ngbDropdownMenu aria-labelledby="dropdown01">
           <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
@@ -36,7 +38,7 @@
           <a class="dropdown-item" routerLink="/admin/adminproducts"
             >Manage Products</a
           >
-          <a class="dropdown-item">Log Out</a>
+          <a class="dropdown-item" (click)="logout()">Log Out</a>
         </div>
       </li>
     </ul>
