--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <bs-navbar></bs-navbar>
 
-<main role="main" class="container">
+<main role="main" class="container-fluid">
   <div class="starter-template">
     <router-outlet></router-outlet>
   </div>
