--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -22,7 +22,7 @@
           <a class="nav-link" routerLink="/login">LogIn</a>
         </li>
       </ng-template>
-      <li ngbDropdown class="nav-item cursor" *ngIf='auth.user$ | async as user else anonymusUser '>
+      <li ngbDropdown class="nav-item cursor" *ngIf='appUser else anonymusUser '>
         <a
           class="nav-link"
           ngbDropdownToggle
@@ -30,14 +30,16 @@
           data-toggle="dropdown"
           aria-haspopup="true"
           aria-expanded="false"
-          >{{user.displayName}}</a
+          >{{appUser.name}}</a
         >
         <div ngbDropdownMenu aria-labelledby="dropdown01">
           <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-          <a class="dropdown-item" routerLink="/admin/adminorders">Manage Orders</a>
-          <a class="dropdown-item" routerLink="/admin/adminproducts"
-            >Manage Products</a
-          >
+          <ng-container *ngIf="appUser.isAdmin">
+            <a class="dropdown-item" routerLink="/admin/adminorders">Manage Orders</a>
+            <a class="dropdown-item" routerLink="/admin/adminproducts"
+              >Manage Products</a
+            >
+          </ng-container>
           <a class="dropdown-item" (click)="logout()">Log Out</a>
         </div>
       </li>
